# grimoire

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.server  Dockerfile.web
crates/grimoire-app/: Cargo.toml
crates/grimoire-app/src/: config.rs  dlsite.rs  export.rs  lib.rs  metadata_source.rs  organization.rs  scanner.rs  steam.rs  storage.rs  vndb.rs
crates/grimoire-app/tests/: scanner_fixture.rs
crates/grimoire-domain/: Cargo.toml
crates/grimoire-domain/src/: inventory.rs  metadata.rs  staging.rs
crates/grimoire-server/: Cargo.toml
crates/grimoire-server/migrations/: 0001_initial.sql  0002_game_works_cover_url.sql  0003_game_works_dlsite_detail.sql  0004_game_works_work_type.sql  0005_game_works_vndb_id.sql  0006_game_works_enriched_at.sql  0007_game_works_steam_app_id.sql
crates/grimoire-server/src/: main.rs  state.rs
crates/grimoire-server/src/routes/: assets.rs  download.rs  library.rs  metadata.rs  mod.rs  scan.rs
crates/hgame-app/: Cargo.toml
crates/hgame-app/src/: config.rs  export.rs  metadata_source.rs  organization.rs  scanner.rs
crates/hgame-app/tests/: scanner_fixture.rs
crates/hgame-domain/: Cargo.toml
crates/hgame-domain/src/: asset.rs  category.rs  inventory.rs  lib.rs  work.rs
crates/hgame-server/: Cargo.toml
crates/hgame-server/migrations/: 0001_initial.sql
crates/hgame-server/src/: main.rs  state.rs
crates/hgame-server/src/routes/: download.rs  mod.rs
deploy/k3s/: 00-namespace.yaml  10-nas-pv-pvc.yaml  20-server.yaml  30-web.yaml  40-ingress.yaml  README.md
docs/superpowers/plans/: 2026-05-10-hgame-manager-foundation.md
docs/superpowers/specs/: 2026-05-10-hgame-manager-design.md
web/: nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/src/: main.rs
web/src/api/: client.ts  types.ts
web/src/components/: AppShell.tsx  BrowseMode.tsx  ConfirmDialog.tsx  CoverEditor.tsx  DetailPanel.tsx  FilterDropdown.tsx  Gallery.tsx  InlineText.tsx  ItemFocus.tsx  LibraryGrid.tsx  LibraryTable.tsx  OrganizeMode.tsx  ReviewQueue.tsx  SamplesEditor.tsx  SearchPanel.tsx  StagingView.tsx  ThemeToggle.tsx  useImagePreview.tsx
