[package]
name = "grimoire-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["multipart"] }
chrono.workspace = true
dotenvy.workspace = true
grimoire-app = { path = "../grimoire-app" }
grimoire-domain = { path = "../grimoire-domain" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7", features = ["io"] }
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tower = "0.5"
